--- a/Facebook/src/com/facebook/respository/locators.properties
+++ b/Facebook/src/com/facebook/respository/locators.properties
@@ -1,6 +1,6 @@
 EmailOrPhone = //*[@id='email']
 Password = //*[@id='pass']
-Login = //*[@id='u_0_b']
+Login = //*[@id='u_0_b_hi']
 FirstName = //*[@id='u_0_m']
 Surname = //*[@id='u_0_o']
 MobileNumber = //*[@id='u_0_r']
